interface tweaks and base of pwgen stuff

--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -7,13 +7,25 @@
     <x>0</x>
     <y>0</y>
     <width>266</width>
-    <height>235</height>
+    <height>184</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Password</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>12</number>
+   </property>
+   <property name="topMargin">
+    <number>12</number>
+   </property>
+   <property name="rightMargin">
+    <number>12</number>
+   </property>
+   <property name="bottomMargin">
+    <number>12</number>
+   </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
