--- a/dialog.ui
+++ b/dialog.ui
@@ -6,18 +6,30 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>563</width>
-    <height>240</height>
+    <width>594</width>
+    <height>309</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Configuration</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="leftMargin">
+    <number>12</number>
+   </property>
+   <property name="topMargin">
+    <number>12</number>
+   </property>
+   <property name="rightMargin">
+    <number>12</number>
+   </property>
+   <property name="bottomMargin">
+    <number>12</number>
+   </property>
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_3">
       <attribute name="title">
@@ -75,10 +87,20 @@
              <string>Native</string>
             </property>
             <layout class="QGridLayout" name="gridLayout">
-             <item row="0" column="0">
-              <widget class="QLabel" name="labelGpgPath">
+             <item row="1" column="0">
+              <widget class="QLabel" name="labelGitPath">
                <property name="text">
-                <string>gpg</string>
+                <string>git</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QLineEdit" name="gpgPath"/>
+             </item>
+             <item row="0" column="2">
+              <widget class="QToolButton" name="toolButtonGpg">
+               <property name="text">
+                <string>...</string>
                </property>
               </widget>
              </item>
@@ -89,25 +111,32 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="labelGitPath">
+             <item row="0" column="0">
+              <widget class="QLabel" name="labelGpgPath">
                <property name="text">
-                <string>git</string>
+                <string>gpg</string>
                </property>
               </widget>
              </item>
              <item row="1" column="1">
               <widget class="QLineEdit" name="gitPath"/>
              </item>
-             <item row="0" column="2">
-              <widget class="QToolButton" name="toolButtonGpg">
+             <item row="2" column="1">
+              <widget class="QLineEdit" name="pwgenPath"/>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="labelPwgenPath">
+               <property name="text">
+                <string>pwgen</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="2">
+              <widget class="QToolButton" name="toolButtonPwgen">
                <property name="text">
                 <string>...</string>
                </property>
               </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QLineEdit" name="gpgPath"/>
              </item>
             </layout>
            </widget>
@@ -117,22 +146,32 @@
             <property name="title">
              <string>Pass</string>
             </property>
-            <layout class="QGridLayout" name="gridLayout_2">
-             <item row="0" column="2">
-              <widget class="QToolButton" name="toolButtonPass">
-               <property name="text">
-                <string>...</string>
+            <layout class="QVBoxLayout" name="verticalLayout_4">
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_4">
+               <property name="sizeConstraint">
+                <enum>QLayout::SetMinimumSize</enum>
                </property>
-              </widget>
+               <item>
+                <widget class="QLabel" name="labelPassPath">
+                 <property name="text">
+                  <string>pass</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="passPath"/>
+               </item>
+               <item>
+                <widget class="QToolButton" name="toolButtonPass">
+                 <property name="text">
+                  <string>...</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="labelPassPath">
-               <property name="text">
-                <string>pass</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0" colspan="3">
+             <item>
               <widget class="QLabel" name="zx2c4">
                <property name="text">
                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;a href=&quot;http://www.passwordstore.org/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;www.passwordstore.org&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -141,9 +180,6 @@
                 <bool>true</bool>
                </property>
               </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QLineEdit" name="passPath"/>
              </item>
             </layout>
            </widget>
@@ -157,7 +193,7 @@
       <attribute name="title">
        <string>Settings</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout_3">
+      <layout class="QVBoxLayout" name="verticalLayout_5">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -170,78 +206,140 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item row="0" column="0" colspan="2">
-        <widget class="QCheckBox" name="checkBoxClipboard">
-         <property name="text">
-          <string>Use clipboard</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="2">
-        <widget class="QCheckBox" name="checkBoxAutoclear">
-         <property name="text">
-          <string>Autoclear</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QSpinBox" name="spinBoxAutoclearSeconds"/>
+       <item>
+        <layout class="QGridLayout" name="gridLayout_2">
+         <item row="3" column="3">
+          <layout class="QHBoxLayout" name="horizontalLayout_6">
+           <item>
+            <widget class="QSpinBox" name="spinBoxPasswordLength">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="labelLength">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Characters</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
          </item>
-         <item>
-          <widget class="QLabel" name="labelSeconds">
+         <item row="2" column="1" colspan="2">
+          <widget class="QCheckBox" name="checkBoxAddGPGId">
            <property name="text">
-            <string>Seconds</string>
+            <string>Automatically add .gpg-id files</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QCheckBox" name="checkBoxUsPwgen">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Use pwgen</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QCheckBox" name="checkBoxClipboard">
+           <property name="text">
+            <string>Use clipboard</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="3">
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <widget class="QSpinBox" name="spinBoxAutoclearSeconds"/>
+           </item>
+           <item>
+            <widget class="QLabel" name="labelSeconds">
+             <property name="text">
+              <string>Seconds</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item row="1" column="0">
+          <widget class="QCheckBox" name="checkBoxHidePassword">
+           <property name="text">
+            <string>Hide password</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
+          <widget class="QCheckBox" name="checkBoxUseTrayIcon">
+           <property name="text">
+            <string>Use TrayIcon</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="QCheckBox" name="checkBoxHideOnClose">
+           <property name="text">
+            <string>Hide on close</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QCheckBox" name="checkBoxUseGit">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="text">
+            <string>Use git</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QCheckBox" name="checkBoxHideContent">
+           <property name="text">
+            <string>Hide content</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QCheckBox" name="checkBoxUseSymbols">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Include special symbols </string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QCheckBox" name="checkBoxAutoclear">
+           <property name="text">
+            <string>Autoclear</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1" colspan="3">
+          <widget class="QLineEdit" name="lineEditPasswordChars">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0">
+          <widget class="QLabel" name="labelPasswordChars">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="text">
+            <string>Use characters</string>
            </property>
           </widget>
          </item>
         </layout>
-       </item>
-       <item row="1" column="0">
-        <widget class="QCheckBox" name="checkBoxHidePassword">
-         <property name="text">
-          <string>Hide password</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QCheckBox" name="checkBoxHideContent">
-         <property name="text">
-          <string>Hide content</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QCheckBox" name="checkBoxUseGit">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
-         <property name="text">
-          <string>Use git</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1" colspan="3">
-        <widget class="QCheckBox" name="checkBoxAddGPGId">
-         <property name="text">
-          <string>Automatically add .gpg-id files</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QCheckBox" name="checkBoxUseTrayIcon">
-         <property name="text">
-          <string>Use TrayIcon</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QCheckBox" name="checkBoxHideOnClose">
-         <property name="text">
-          <string>Hide on close</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
@@ -377,6 +475,8 @@
   <tabstop>toolButtonGpg</tabstop>
   <tabstop>gitPath</tabstop>
   <tabstop>toolButtonGit</tabstop>
+  <tabstop>pwgenPath</tabstop>
+  <tabstop>toolButtonPwgen</tabstop>
   <tabstop>passPath</tabstop>
   <tabstop>toolButtonPass</tabstop>
   <tabstop>checkBoxClipboard</tabstop>
