cleanup of ui and finalizing stuff

--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -87,6 +87,12 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>lineEditPassword</tabstop>
+  <tabstop>createPasswordButton</tabstop>
+  <tabstop>checkBoxShow</tabstop>
+  <tabstop>plainTextEdit</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
